syntax = "proto3";

package rivet.backend.user.event;

import "proto/common.proto";
import "proto/backend/user.proto";

message Event {
	reserved 3, 6;

	oneof kind {
		UserUpdate user_update = 5;
		MatchmakerLobbyJoin matchmaker_lobby_join = 4;
		TeamMemberRemove team_member_remove = 7;
	}
}

message UserUpdate {
	
}

message MatchmakerLobbyJoin {
	rivet.common.Uuid namespace_id = 1;
	rivet.common.Uuid query_id = 2;
	rivet.common.Uuid lobby_id = 3;
	rivet.common.Uuid player_id = 4;
	string player_token = 5;
}

message TeamMemberRemove {
	rivet.common.Uuid team_id = 1;
}
